# paperchat

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  chat_history.json  cli.py  docker-compose-chroma.yml  docker-compose-qdrant.yml  docker-compose.yml  download.py  download_pdfs.sh  gunicorn_conf.py  pyproject.toml  scipt.py  script.py  test.py
.well-known/: ai-plugin.json  openapi.yaml
app/: .env.sample  chat.py  cli.py  main.py
app/.well-known/: ai-plugin.json  legal-info  openapi.json
app/api/: models.py
app/api/api_v1/: api.py
app/api/api_v1/endpoints/: ask.py  ingest.py
app/core/: config.py
app/resources/: arxiv.py
app/resources/index/: id_to_uuid_437d8898-06d2-4483-aa43-3f5f6a5a07f9.pkl  index_metadata_437d8898-06d2-4483-aa43-3f5f6a5a07f9.pkl  uuid_to_id_437d8898-06d2-4483-aa43-3f5f6a5a07f9.pkl
app/tools/: factory.py  inference_embeddings.py
app/tools/loaders/: arxiv_loader.py  pdf_loader.py
app/utils/loaders/: arxiv_loader.py  pdf_loader.py
app/worker/: celery.py  tasks.py
deployment/azure/infra/: README.md  main.tf  outputs.tf  provider.tf  variables.tf
deployment/azure/infra/modules/application_insights/: main.tf  variables.tf
deployment/azure/infra/modules/container_apps/: main.tf  vvariables.tf
deployment/azure/infra/modules/log_analytics/: main.tf  output.tf
deployment/azure/infra/modules/private_endpoint/: main.tf
deployment/azure/infra/modules/virtual_network/: main.tf
deployment/gcp/infra/: .terraform.lock.hcl  README.md  main.tf  variables.tf
deployment/gcp/ingester/: README.md  main.tf
