[tool.poetry]
name = "arxivchat"
version = "0.1.0"
description = ""
authors = ["Mateusz Kozak <mateusz@mkozak.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"
pypdf = "^3.7.0"
chromadb = "^0.3.21"
arxiv = "^1.4.4"
python-dotenv = "^1.0.0"
sentry-sdk = "^1.19.1"
celery = {extras = ["redis"], version = "^5.2.7"}
sentence-transformers = "^2.2.2"
qdrant-client = "^1.1.5"
feedparser = "^6.0.10"
pymupdf = "^1.22.2"
pdfminer-six = "^20221105"
langchain = {extras = ["azure", "embeddings", "openai", "qdrant"], version = "^0.0.166"}
huggingface-hub = "^0.14.1"
pinecone-client = "^2.2.1"
pinecone-text = "^0.4.2"
gunicorn = "^20.1.0"
spacy = "^3.5.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "~23.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"